--- a/Lara_Vue/docker-compose.yml
+++ b/Lara_Vue/docker-compose.yml
@@ -35,5 +35,11 @@ services:
       - mysql-data:/var/lib/mysql
     command: mysqld --character-set-server=utf8mb4 --collation-server=utf8mb4_general_ci
 
+  mailhog:
+    image: mailhog/mailhog:latest
+    ports:
+      - "1025:1025"
+      - "8025:8025"
+
 volumes:
   mysql-data:
